Docs: Note about new file name validator

--- a/src/sass/components/_fileExplorer.scss
+++ b/src/sass/components/_fileExplorer.scss
@@ -1,7 +1,7 @@
-/* 
+/************************************************** 
 MAKE SURE YOU'RE SETTING `font-size: 1.6rem;` 
-on parent element style. 
-*/
+to parent. 
+***************************************************/
 
 .treeColumn:hover {
   background-color: rgba(55, 147, 224, 0.25);
@@ -131,147 +131,3 @@ on parent element style.
 }
 
 
-
-// /**
-//     - ネストする際の幅は、アイコン一つ分くらいの間隔にしたい
-//     - 
-
-// ***/ 
-
-// .treeColumn:hover {
-//     background-color: rgba(55, 147, 224, 0.25);
-// }
-
-// .folder {
-//     display: flex;
-//     flex-flow: row nowrap;
-//     align-items: center;
-//     justify-content: space-between;
-//     cursor: pointer;
-//     overflow-x: hidden;
-
-//     &:hover .folder--function {
-//         opacity: 1;
-//     }
-
-//     & > span {
-//         padding-left: calc(1rem - 2px);
-//         border-right: 2px solid transparent;
-//         min-height: 28px;
-//         border-top-color: transparent;
-//         border-bottom-color: transparent;
-//         border-left-color: transparent;
-//         white-space: nowrap;
-//     }
-    
-//     & > div > button {
-//         font-size: 15px;
-//         background-color: white;
-//     }
-    
-//     &--function {
-//         display: flex;
-//         flex-flow: row nowrap;
-//         opacity: 0;
-//     }
-    
-//     & > div {
-//         padding-left: 1rem;
-//     }
-// }
-
-// .inputContainer {
-//     display: block;
-//     position: relative;
-//     padding-left: calc(1rem - 2px);
-
-//     & > span {
-//         margin-top: 5px;
-//     }
-    
-//     &--column {
-//         display: flex;
-//         gap: 5px;
-//     }
-    
-//     /* NOTE: 
-//         heightを指定すると
-//         border-boxを指定しても
-//         inputが親領域いっぱいに拡がってくれない 
-
-//         paneいっぱいまで幅をとる
-//     */
-//     &--input {
-//         margin: 0;
-//         padding: 0px;
-//         border: 1px solid lightgray;
-//         cursor: pointer;
-//         width: 100%;
-//         box-sizing: border-box;
-//         -webkit-box-sizing: border-box;
-//         -moz-box-sizing: border-box;
-//         -o-box-sizing: border-box;
-//         -ms-box-sizing: border-box;
-//     }
-    
-//     &--input:focus {
-//         outline: none;
-//     }
-    
-//     &--input:focus.__valid {
-//         border: 1px solid cyan;
-//     }
-    
-//     &--input:not(:placeholder-shown).__invalid {
-//         border: 1px solid red;
-//     }
-// }
-
-// /* 
-// 前提：width: 100% === inputContainer width
-// 0.8rem: inputCotnainer padding-left
-// 21.41px: icon element width
-// 5px: gap between icon element and input element
-// */
-// .inputContainer--validSign {
-//     width: calc(100% - 0.8rem - 21.41px - 5px);
-//     position: absolute;
-//     margin-left: calc(21.41px + 5px);
-    
-//     &.__invalid {
-//         background-color: red;
-//         opacity: 0.8;
-//         border: 1px solid pink;
-//     }
-    
-//     &.__valid {
-//         background-color: cyan;
-//         opacity: 0.8;
-//         border: 1px solid blue;
-//     }
-// }
-  
-
-// .file {
-//     display: flex;
-//     justify-content: space-between;
-
-//     &:hover .file--function {
-//         opacity: 1;
-//     }
-    
-//     & > span {
-//         white-space: nowrap;
-//     }
-    
-//     &--function {
-//         margin: auto 0;
-//         opacity: 0;
-//     }
-    
-//     &--name {
-//         padding-left: calc(1rem - 2px);
-//         display: flex;
-//         flex-direction: column;
-//     }
-// }
